--- a/src/Extensions/Banshee.Audiobook/Banshee.Audiobook.csproj
+++ b/src/Extensions/Banshee.Audiobook/Banshee.Audiobook.csproj
@@ -83,6 +83,7 @@
       <HintPath>..\..\..\bin\bin\taglib-sharp.dll</HintPath>
       <Package>taglib-sharp</Package>
     </Reference>
+    <Reference Include="gio-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Banshee.Audiobook.addin.xml">
