--- a/src/Extensions/Banshee.Daap/Banshee.Daap.csproj
+++ b/src/Extensions/Banshee.Daap/Banshee.Daap.csproj
@@ -76,6 +76,7 @@
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\..\..\bin\bin\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
+    <Reference Include="gio-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Banshee.Daap\DaapService.cs" />
