--- a/src/Extensions/Banshee.Sample/Banshee.Sample.csproj
+++ b/src/Extensions/Banshee.Sample/Banshee.Sample.csproj
@@ -70,6 +70,8 @@
     <Reference Include="cairo-sharp, Version=1.10.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
       <HintPath>..\..\..\bin\bin\cairo-sharp.dll</HintPath>
     </Reference>
+    <Reference Include="glib-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <Reference Include="atk-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Banshee.Sample.addin.xml">
