--- a/src/Dap/Banshee.Dap/Banshee.Dap.csproj
+++ b/src/Dap/Banshee.Dap/Banshee.Dap.csproj
@@ -74,6 +74,7 @@
       <HintPath>..\..\..\bin\bin\Mono.Addins.dll</HintPath>
       <Package>mono-addins</Package>
     </Reference>
+    <Reference Include="gio-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Banshee.Dap\DapSource.cs" />
