--- a/src/Extensions/Banshee.InternetArchive/Banshee.InternetArchive.csproj
+++ b/src/Extensions/Banshee.InternetArchive/Banshee.InternetArchive.csproj
@@ -128,5 +128,6 @@
     </Reference>
     <Reference Include="gdk-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="pango-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <Reference Include="gio-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
 </Project>
