--- a/src/Extensions/Banshee.MediaPanel/Banshee.MediaPanel.csproj
+++ b/src/Extensions/Banshee.MediaPanel/Banshee.MediaPanel.csproj
@@ -71,6 +71,8 @@
       <Project>{C856EFD8-E812-4E61-8B76-E3583D94C233}</Project>
       <Name>Hyena.Gui</Name>
     </ProjectReference>
+    <Reference Include="System" />
+    <Reference Include="atk-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
