--- a/src/Extensions/Banshee.MiniMode/Banshee.MiniMode.csproj
+++ b/src/Extensions/Banshee.MiniMode/Banshee.MiniMode.csproj
@@ -66,6 +66,7 @@
       <Project>{95374549-9553-4C1E-9D89-667755F90E12}</Project>
       <Name>Hyena</Name>
     </ProjectReference>
+    <Reference Include="gio-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
