--- a/src/Extensions/Banshee.PlayerMigration/Banshee.PlayerMigration.csproj
+++ b/src/Extensions/Banshee.PlayerMigration/Banshee.PlayerMigration.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="atk-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="glib-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <Reference Include="gio-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Banshee.PlayerMigration\AmarokPlayerImportSource.cs" />
