--- a/src/Extensions/Banshee.Podcasting/Banshee.Podcasting.csproj
+++ b/src/Extensions/Banshee.Podcasting/Banshee.Podcasting.csproj
@@ -77,6 +77,7 @@
       <Project>{C856EFD8-E812-4E61-8B76-E3583D94C233}</Project>
       <Name>Hyena.Gui</Name>
     </ProjectReference>
+    <Reference Include="gio-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="gtk-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
