--- a/src/Extensions/Banshee.SoundMenu/Banshee.SoundMenu.csproj
+++ b/src/Extensions/Banshee.SoundMenu/Banshee.SoundMenu.csproj
@@ -37,6 +37,7 @@
     <Reference Include="gdk-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="Mono.Addins, Version=0.4.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
       <Package>mono-addins</Package>
+      <SpecificVersion>False</SpecificVersion>
     </Reference>
   </ItemGroup>
   <ItemGroup>
