--- a/src/Libraries/Lastfm.Gui/Lastfm.Gui.csproj
+++ b/src/Libraries/Lastfm.Gui/Lastfm.Gui.csproj
@@ -37,6 +37,7 @@
     <Reference Include="Mono.Posix">
       <HintPath>..\..\..\bin\bin\Mono.Posix.dll</HintPath>
     </Reference>
+    <Reference Include="gio-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lastfm\Lastfm.csproj">
