GStreamerSharp: update to work with new 0.99.0 version
The new 0.99.0 version of this binding targets GStreamer 1.0. This
has been an accomplishment that took many weeks, starting from the
Gnome .NET 2013 Hackfest in Vienna.

Contributions from:
 Stephan Sundermann,
 Olivier Dufour,
 Andres G. Aragoneses

--- a/src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp.csproj
+++ b/src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp.csproj
@@ -32,7 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="gstreamer-sharp, Version=0.9.2.0, Culture=neutral, PublicKeyToken=4956b48baf980190">
+    <Reference Include="gstreamer-sharp, Version=0.99.0.0, Culture=neutral, PublicKeyToken=4956b48baf980190">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\bin\bin\gstreamer-sharp.dll</HintPath>
     </Reference>
@@ -75,6 +75,7 @@
     <Compile Include="Banshee.GStreamerSharp\VideoManager.cs" />
     <Compile Include="Banshee.GStreamerSharp\Visualization.cs" />
     <Compile Include="Banshee.GStreamerSharp\DvdManager.cs" />
+    <Compile Include="Banshee.GStreamerSharp\GstExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
