--- a/src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp.dll.config
+++ b/src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp.dll.config
@@ -3,5 +3,5 @@
   <dllmap dll="libgdk-3-0.dll" target="libgdk-3-0.dll" os="windows"/>
   <!-- FIXME: map to a .dylib in Mac? -->
 
-  <dllmap dll="libgstfft-0.10.dll" target="libgstfft-0.10.so"/>
+  <dllmap dll="libgstfft-1.0-0.dll" target="libgstfft-1.0.so" os="!windows" />
 </configuration>
