--- a/src/Backends/Banshee.GStreamerSharp/Makefile.am
+++ b/src/Backends/Banshee.GStreamerSharp/Makefile.am
@@ -9,6 +9,7 @@ SOURCES =  \
 	Banshee.GStreamerSharp/CddaManager.cs \
 	Banshee.GStreamerSharp/DvdManager.cs \
 	Banshee.GStreamerSharp/GstExtensions.cs \
+	Banshee.GStreamerSharp/MediaProfileBackend.cs \
 	Banshee.GStreamerSharp/PlayerEngine.cs \
 	Banshee.GStreamerSharp/Transcoder.cs \
 	Banshee.GStreamerSharp/VideoManager.cs \
