tests: simplify Makefile.am
* There's no need to use 'export' to set variables here.
* Check for the exit code of the current test run can be
less verbose by using the || operator.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -32,14 +32,11 @@ endif
 ENV_OPTIONS = TZ=America/Chicago LC_ALL=it_IT LANG=it_IT
 NUNIT_CONSOLE = $$(echo $$(which nunit-console2 || which nunit-console))
 RUNNER = \
-	export GLOBAL_EXIT_CODE=0; \
+	GLOBAL_EXIT_CODE=0; \
 	for asm in $${TEST_ASSEMBLIES}; do \
 		echo -e "\033[1mRunning tests on $${asm}...\033[0m"; \
-		$(ENV_OPTIONS) $(NUNIT_CONSOLE) -nologo -noshadow $$asm; \
-		export CURRENT_EXIT_CODE="$$?"; \
-		if [[ $${CURRENT_EXIT_CODE} -ne 0 ]]; then \
-			export GLOBAL_EXIT_CODE=1; \
-		fi; \
+		$(ENV_OPTIONS) $(NUNIT_CONSOLE) -nologo -noshadow $$asm \
+			|| GLOBAL_EXIT_CODE=$$?; \
 	done; \
 	if [[ $${GLOBAL_EXIT_CODE} -ne 0 ]]; then \
 		echo "One or more tests failed"; \
@@ -48,14 +45,14 @@ RUNNER = \
 
 test:
 	@pushd $(DIR_BIN) &>/dev/null; \
-	export TEST_ASSEMBLIES="$(TEST_ASSEMBLIES)"; $(RUNNER); \
+	TEST_ASSEMBLIES="$(TEST_ASSEMBLIES)"; $(RUNNER); \
 	popd &>/dev/null;
 
 %:
 	@pushd $(DIR_BIN) &>/dev/null; \
 	for i in *.dll; do \
 		if [[ $$(echo "$$i" | tr "[:upper:]" "[:lower:]") = "$$(echo "$@" | tr "[:upper:]" "[:lower:]").dll" ]]; then \
-			export TEST_ASSEMBLIES="$$i"; $(RUNNER); \
+			TEST_ASSEMBLIES="$$i"; $(RUNNER); \
 		fi; \
 	done;
 
