tests: use --debug to bring line numbers
For easier debugging of failed tests, it's better to
use the --debug flag to the mono process, which can
be set via the MONO_ENV_OPTIONS env var in case we
don't have direct access to the mono caller (which
in this case is the nunit-console script).

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -30,12 +30,13 @@ TEST_ASSEMBLIES += Banshee.UbuntuOneMusicStore.dll
 endif
 
 ENV_OPTIONS = TZ=America/Chicago LC_ALL=it_IT LANG=it_IT
+MONO_OPTIONS = MONO_ENV_OPTIONS=--debug
 NUNIT_CONSOLE = $$(echo $$(which nunit-console2 || which nunit-console))
 RUNNER = \
 	GLOBAL_EXIT_CODE=0; \
 	for asm in $${TEST_ASSEMBLIES}; do \
 		echo -e "\033[1mRunning tests on $${asm}...\033[0m"; \
-		$(ENV_OPTIONS) $(NUNIT_CONSOLE) -nologo -noshadow $$asm \
+		$(ENV_OPTIONS) $(MONO_OPTIONS) $(NUNIT_CONSOLE) -nologo -noshadow $$asm \
 			|| GLOBAL_EXIT_CODE=$$?; \
 	done; \
 	if [[ $${GLOBAL_EXIT_CODE} -ne 0 ]]; then \
