Importing: bail for nonreadable files (bgo#725185)
There's no point in importing files that can be
found but which cannot be read, because their
playback will fail anyway. Rather fail fast
telling the user what went wrong during the
import.

Signed-off-by: Andrés G. Aragoneses <knocte@gmail.com>

--- a/src/Core/Banshee.Core/Makefile.am
+++ b/src/Core/Banshee.Core/Makefile.am
@@ -45,6 +45,7 @@ SOURCES =  \
 	Banshee.IO/IDemuxVfs.cs \
 	Banshee.IO/IDirectory.cs \
 	Banshee.IO/IFile.cs \
+	Banshee.IO/IFileSystemEntryPermissions.cs \
 	Banshee.IO/IProvider.cs \
 	Banshee.IO/Provider.cs \
 	Banshee.IO/ProviderConfiguration.cs \
