--- a/src/Core/Banshee.Core/Banshee.Core.csproj
+++ b/src/Core/Banshee.Core/Banshee.Core.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Banshee.IO\Tests.cs" />
     <Compile Include="Banshee.Collection\YearInfo.cs" />
     <Compile Include="Banshee.IO\ProviderConfiguration.cs" />
+    <Compile Include="Banshee.IO\IFileSystemEntryPermissions.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\contributors.xml">
