--- a/src/Core/Banshee.Services/Makefile.am
+++ b/src/Core/Banshee.Services/Makefile.am
@@ -158,6 +158,7 @@ SOURCES =  \
 	Banshee.Playlists.Formats/InvalidPlaylistException.cs \
 	Banshee.Playlists.Formats/IPlaylistFormat.cs \
 	Banshee.Playlists.Formats/M3uPlaylistFormat.cs \
+	Banshee.Playlists.Formats/ParsedPlaylist.cs \
 	Banshee.Playlists.Formats/PlaylistElement.cs \
 	Banshee.Playlists.Formats/PlaylistFormatBase.cs \
 	Banshee.Playlists.Formats/PlaylistFormatDescription.cs \
