ThickClient: avoid using GConf workaround for --disable-gnome (bgo#692374)
Previous fix to make dbus-glib-1 dependency mandatory [1] when still
using GConf missed the fact that Mac and Windows builds are compiled
with --disable-gnome flag, and the workaround shouldn't be called in
these cases.

[1] https://git.gnome.org/browse/banshee/commit/?id=abdfd9c0786d159b7c24cbcff56eabd61f5d6b9a

--- a/src/Core/Banshee.ThickClient/Makefile.am
+++ b/src/Core/Banshee.ThickClient/Makefile.am
@@ -3,6 +3,10 @@ TARGET = library
 ASSEMBLY_BUILD_FLAGS = -unsafe
 LINK = $(REF_BANSHEE_THICKCLIENT)
 
+if ENABLE_GNOME
+BUILD_DEFINES = "-define:GNOME"
+endif
+
 SOURCES =  \
 	Banshee.Addins.Gui/AddinView.cs \
 	Banshee.CairoGlyphs/BansheeLineLogo.cs \
