build: avoid error in uninstall target if already uninstalled
If 'make uninstalled' was executed twice, the second time would
yield this error:

find: `/usr/lib/banshee': No such file or directory

(if the prefix configured was /usr)

Wrap the `find` call in an block that checks for the existence
of the installed path first.

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,8 +14,10 @@ clean-local:
 	rm -rf $(top_builddir)/bin
 
 uninstall-hook:
-	if test `find $(pkglibdir) | wc -l` -eq 1; then \
-		rmdir $(pkglibdir); \
+	if test -d $(pkglibdir); then \
+		if test `find $(pkglibdir) | wc -l` -eq 1; then \
+			rmdir $(pkglibdir); \
+		fi \
 	fi
 
 dist-hook:
