build: remove Backends & Extensions subfolders at uninstall (bgo#656895)
If banshee was installed in /usr/local for example, the subfolders
/usr/local/lib/banshee/Backends and /usr/local/lib/banshee/Extensions
were not being removed when running the `make uninstall` target.

--- a/src/Backends/Makefile.am
+++ b/src/Backends/Makefile.am
@@ -8,3 +8,9 @@ SUBDIRS = \
 	Banshee.Windows
 
 MAINTAINERCLEANFILES = Makefile.in
+
+uninstall-hook:
+	if test -d "$(pkglibdir)/Backends"; then \
+		rmdir "$(pkglibdir)/Backends"; \
+	fi
+
