--- a/src/Dap/Banshee.Dap/Banshee.Dap.csproj
+++ b/src/Dap/Banshee.Dap/Banshee.Dap.csproj
@@ -97,6 +97,8 @@
     <Compile Include="Banshee.Dap.Gui\LibrarySyncOptions.cs" />
     <Compile Include="Banshee.Dap\DapPriorityNode.cs" />
     <Compile Include="Banshee.Dap\SyncPlaylist.cs" />
+    <Compile Include="Banshee.Dap\PotentialSource.cs" />
+    <Compile Include="Banshee.Dap\Gui\InactiveDapContent.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Banshee.Dap.addin.xml">
