build: fix the build when using MonoDevelop instead of autotools
There were several errors of this type[1] which just required to
include missing references.

[1] Error CS0012: The type `Foo' is defined in an assembly that
is not referenced. Consider adding a reference to assembly
`Bar, Version=X.Y.Z.T, Culture=neutral, PublicKeyToken=null'
(CS0012) (Baz)

--- a/src/Extensions/Banshee.SoundMenu/Banshee.SoundMenu.csproj
+++ b/src/Extensions/Banshee.SoundMenu/Banshee.SoundMenu.csproj
@@ -39,6 +39,10 @@
       <Package>mono-addins</Package>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="dbus-sharp">
+      <HintPath>..\..\..\bin\bin\dbus-sharp.dll</HintPath>
+      <Package>dbus-sharp-2.0</Package>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Banshee.SoundMenu.addin.xml">
