GStreamerSharp: fix build with MonoDevelop (bgo#724752)
We had to use the <Package> element, not a HintPath. And also the
publicKeyToken was wrong...

--- a/src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp.csproj
+++ b/src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp.csproj
@@ -32,9 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="gstreamer-sharp, Version=0.99.0.0, Culture=neutral, PublicKeyToken=4956b48baf980190">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\bin\bin\gstreamer-sharp.dll</HintPath>
+    <Reference Include="gstreamer-sharp, Version=0.99.0.0, Culture=neutral, PublicKeyToken=5cbf79803e97ff61">
+      <Package>gstreamer-sharp-1.0</Package>
     </Reference>
     <Reference Include="glib-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="Mono.Posix">
