GStreamerSharp: improve previous commit to fix the build (bgo#724752)
Previous commit [1] fixed the build for MonoDevelop in Linux, but
could likely break the build for Windows, where we don't use pkg-config
(we just place the dependencies in a directory). So seems like using
<HintPath> along with <Package> element doesn't generate any conflicts.

[1] https://git.gnome.org/browse/banshee/commit/?id=1ea5969f81f951009202e4884b01eda6ffd671f7

--- a/src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp.csproj
+++ b/src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp.csproj
@@ -34,6 +34,8 @@
     <Reference Include="System.Core" />
     <Reference Include="gstreamer-sharp, Version=0.99.0.0, Culture=neutral, PublicKeyToken=5cbf79803e97ff61">
       <Package>gstreamer-sharp-1.0</Package>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\bin\bin\gstreamer-sharp.dll</HintPath>
     </Reference>
     <Reference Include="glib-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="Mono.Posix">
