ThickClient: ArtistList renderers support via addins (bgo#646765)
The first two b-c-e extensions that will make use of this are:
- FanArt
- ArtistListCovers

Signed-off-by: Andrés G. Aragoneses <knocte@gmail.com>

--- a/src/Core/Banshee.ThickClient/Banshee.ThickClient.csproj
+++ b/src/Core/Banshee.ThickClient/Banshee.ThickClient.csproj
@@ -285,6 +285,9 @@
     <Compile Include="Banshee.Gui.Widgets\Tests\TrackInfoDisplayTests.cs" />
     <Compile Include="Banshee.Gui.Dialogs\GtkFileChooserDialog.cs" />
     <Compile Include="Banshee.Gui\WindowConfiguration.cs" />
+    <Compile Include="Banshee.Gui\ArtistListActions.cs" />
+    <Compile Include="Banshee.Collection.Gui\ColumnCellArtistText.cs" />
+    <Compile Include="Banshee.Collection.Gui\IArtistListRenderer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
