--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -101,6 +101,7 @@ src/Core/Banshee.Services/Banshee.Web/Browser.cs
 src/Core/Banshee.ThickClient/Banshee.Addins.Gui/AddinView.cs
 src/Core/Banshee.ThickClient/Banshee.Collection.Gui/AlbumListView.cs
 src/Core/Banshee.ThickClient/Banshee.Collection.Gui/BaseTrackListView.cs
+src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellArtistText.cs
 src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellDiscAndCount.cs
 src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellStatusIndicator.cs
 src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellTrackAndCount.cs
@@ -110,6 +111,7 @@ src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs
 src/Core/Banshee.ThickClient/Banshee.ContextPane/ContextPane.cs
 src/Core/Banshee.ThickClient/Banshee.Equalizer.Gui/EqualizerView.cs
 src/Core/Banshee.ThickClient/Banshee.Equalizer.Gui/EqualizerWindow.cs
+src/Core/Banshee.ThickClient/Banshee.Gui/ArtistListActions.cs
 src/Core/Banshee.ThickClient/Banshee.Gui/BaseClientWindow.cs
 src/Core/Banshee.ThickClient/Banshee.Gui/BookmarkUI.cs
 src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/AboutDialog.cs
