NotificationArea: play notification on Gnome Lockscreen (bgo#733517)
Signed-off-by: Andrés G. Aragoneses <knocte@gmail.com>

--- a/data/desktop-files/common.desktop.in
+++ b/data/desktop-files/common.desktop.in
@@ -13,3 +13,4 @@ X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=banshee
 X-GNOME-Bugzilla-Component=General
 X-GNOME-Bugzilla-Version=@VERSION@
+X-GNOME-UsesNotifications=true
